--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,35 @@
+*{
+  font-family: "Calibri";
+}
+
 body {
     font-family: "Roboto Light", sans-serif;
+    background-color: #E7AD99;
 }
-h1{
-    font-size: 850%;
+
+p{
+    font-size: 300%;
+}
+
+a:visited{
+    color: inherit;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    color: rgb(128, 128, 128);
+}
+
+h1 {
+    font-size: 700%;
     margin-top: 0;
     margin-bottom: 0;
+    color: #495867;
+    font-family: Ramona;
+    text-align: left;
 }
 #sidebar {
     width: 15%;
@@ -13,9 +38,12 @@ h1{
     top: 0;
     left: 0;
     float: left;
-    background-color: #9538ee;
+    background-color: #ECC8AF;
     color: white;
     text-align: center;
+    box-shadow: 0 4px 100px rgba(0, 0, 0, 0.2);
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 #sidebar > footer{
@@ -25,6 +53,7 @@ h1{
 
 #sidebar > *{
     margin: 10%;
+    color: #413934;
 }
 #sidebar-nav{
     margin-top: 30%;
@@ -32,6 +61,7 @@ h1{
 #sidebar-nav > a{
     display: block;
     margin-bottom: 10px;
+    font-size: 180%;
 }
 
 #avatar-label{
@@ -39,12 +69,9 @@ h1{
 }
 #avatar-image{
     margin-bottom: 1%;
-}
-
-
-#avatar-image{
     width: 80%;
     border-radius: 50%;
+    border-width: 10px;
 }
 
 #contacts  img{
@@ -57,6 +84,34 @@ header, main{
 }
 
 .structure-part{
-    padding-top: 12%;
+    /*padding-top: 12%;*/
+    margin: 5%;
+    margin-bottom: 20%;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 100px rgba(0, 0, 0, 0.2);
+    padding: 5%;
+
+}
+
+ul{
+    list-style-type: none;
+}
+
+#skill-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+#skill-list li {
+    list-style-position: inside;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+ol,ul{
+    padding-left: 0;
+    margin-left: 0;
 }
 
