--- a/personal-page-svetle/src/app.css
+++ b/personal-page-svetle/src/app.css
@@ -1,79 +1,77 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  font-family: "Calibri";
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: "Roboto Light", sans-serif;
+  background-color: #E7AD99;
+}
+
+p {
+  font-size: 300%;
+  text-align: left;
+  align-content: start;
+}
+
+a:visited {
+  color: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(128, 128, 128);
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 700%;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #495867;
+  font-family: Ramona;
+  text-align: left;
 }
 
-.card {
-  padding: 2em;
+#contacts img {
+  height: 100px;
+  margin: 10px;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+header, main {
+  padding-left: 17%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.structure-part{
+  /*padding-top: 12%;*/
+  margin: 5%;
+  margin-bottom: 20%;
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 4px 100px rgba(0, 0, 0, 0.2);
+  padding: 5%;
+
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+ul {
+  list-style-type: none;
+}
+
+#skill-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+#skill-list li {
+  list-style-position: inside;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+  padding-left: 0;
+  margin-left: 0;
 }
